--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,8 +3,18 @@ body {
   margin: 0;
 }
 
-#map,
+#mapid,
 body,
 html {
   height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+#container {
+	height: 90%;
+	width: 100%;
+	padding: 0;
+	margin: 0;
 }
